compiler-core/src/type_/tests/snapshots/glistix_core__type___tests__nix__nix_unsafe_int_binary.snap
---
source: compiler-core/src/type_/tests/nix.rs
expression: "\n  [\n    0b111111111111111111111111111111111111111111111111111111111111110,\n    0b111111111111111111111111111111111111111111111111111111111111111,\n    0b1000000000000000000000000000000000000000000000000000000000000000,\n  ]\n"
---
----- SOURCE CODE

  [
    0b111111111111111111111111111111111111111111111111111111111111110,
    0b111111111111111111111111111111111111111111111111111111111111111,
    0b1000000000000000000000000000000000000000000000000000000000000000,
  ]


----- ERROR
error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:5:5
  │
5 │     0b1000000000000000000000000000000000000000000000000000000000000000,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).
